--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    include: base, local_db
+    include: base, h2_db
 a:
   local
 ---
@@ -45,12 +45,27 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
   datasource:
-    url: jdbc:mysql://${db.containerId:localhost}:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
-  jpa:
-    hibernate:
-      #ddl-auto: validate
+    url: jdbc:mysql://${db.containerId:localhost}:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 a:
   local_db
+---
+spring:
+  profiles: local_db_hibernate
+  flyway:
+    locations: classpath:db/migration
+    enabled: false
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+  datasource:
+    url: jdbc:mysql://${db.containerId:localhost}:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    database-platform: org.hibernate.dialect.H2Dialect
+a:
+  local_db_hibernate
 ---
 spring:
   profiles: h2_db
