--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -97,7 +97,13 @@
     <dependency>
       <groupId>org.elasticsearch.client</groupId>
       <artifactId>elasticsearch-rest-high-level-client</artifactId>
-      <version>6.4.3</version>
+      <version>6.6.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>6.6.0</version>
     </dependency>
 
     <!-- app-client -->
