--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -93,6 +93,12 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.elasticsearch.client</groupId>
