--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,13 @@ services:
       - app_local_network
 
   app-local-elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
     container_name: elasticsearch
     environment:
       - cluster.name=docker-cluster
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
     volumes:
       - app_local_elasticsearch:/usr/share/elasticsearch/data
     ports:
@@ -36,7 +37,7 @@ services:
       - app_local_network
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:6.6.0
+    image: docker.elastic.co/kibana/kibana:7.2.0
     container_name: kibana
     ports:
       - 5601:5601
