--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -99,18 +99,25 @@
       <version>19.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-elasticsearch</artifactId>
+      <version>3.2.0.RC1</version>
+    </dependency>
 
+    <!--
     <dependency>
       <groupId>org.elasticsearch.client</groupId>
       <artifactId>elasticsearch-rest-high-level-client</artifactId>
-      <version>7.2.0</version>
+      <version>6.7.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>7.2.0</version>
+      <version>6.7.0</version>
     </dependency>
+    -->
 
     <!-- app-client -->
     <dependency>
