--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -121,6 +121,19 @@
 
     <!-- app-client -->
     <dependency>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>elasticsearch-rest-high-level-client</artifactId>
+      <version>6.7.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>6.7.0</version>
+    </dependency>
+
+    <!-- app-client -->
+    <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>app-client</artifactId>
       <version>${project.parent.version}</version>
