--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -33,6 +33,11 @@ management:
     web:
       exposure:
         include: "*"
+com:
+  kalbob:
+    app:
+      es:
+        url: localhost:9200
 a:
   base
 ---
